# NightLake

./: .gitignore  .gitmodules  CMakeLists.txt  cmake_build.bat
.github/workflows/: build.yml
Engine/: CMakeLists.txt
Engine/Source/: Alexio.hpp  NightLake.hpp  aio_pch.cpp  aio_pch.hpp  nle_pch.cpp  nle_pch.hpp
Engine/Source/Audio/: Audio.cpp  Audio.hpp  FLAC_Audio.cpp  FLAC_Audio.hpp  MP3_Audio.cpp  MP3_Audio.hpp  VorbisAudio.cpp  VorbisAudio.hpp  WAV_Audio.cpp  WAV_Audio.hpp
Engine/Source/Core/: Application.cpp  Application.hpp  Assets.hpp  Engine.cpp  Engine.hpp  ImGUI_Builds.cpp  Layer.hpp  Layers.cpp  Log.cpp  Log.hpp  Utilities.hpp
Engine/Source/Events/: Events.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Engine/Source/ImGui/: ImGUI_Builds.cpp  ImGuiBackend.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp
Engine/Source/Input/: Gamepad.cpp  Gamepad.hpp  Input.cpp  Input.hpp  InputCodes.cpp  InputCodes.hpp  InputDevices.cpp  InputDevices.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
Engine/Source/Layers/: ImGUI_Builds.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp  Layer.hpp  Layers.cpp
Engine/Source/Math/: Math.hpp
Engine/Source/Renderer/: Buffers.cpp  Buffers.hpp  Camera.cpp  Camera.hpp  GraphicsContext.hpp  Renderer.cpp  Renderer.hpp  RendererBackend.cpp  RendererBackend.hpp  RendererInput.cpp  RendererInput.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Engine/Source/Renderer/DX11/: DX11_Backend.cpp  DX11_Backend.hpp  DX11_Buffers.cpp  DX11_Buffers.hpp  DX11_Context.cpp  DX11_Context.hpp  DX11_Shader.cpp  DX11_Shader.hpp  DX11_Texture.cpp  DX11_Texture.hpp
Engine/Source/Renderer/OpenGL/: OpenGL_Backend.cpp  OpenGL_Backend.hpp  OpenGL_Buffers.cpp  OpenGL_Buffers.hpp  OpenGL_Context.cpp  OpenGL_Context.hpp  OpenGL_Shader.cpp  OpenGL_Shader.hpp  OpenGL_Texture.cpp  OpenGL_Texture.hpp
Engine/Source/Utils/: FileReading.cpp  FileReading.hpp  Instrumentor.hpp  Log.cpp  Log.hpp  Math.hpp  Timer.cpp  Timer.hpp  Utilities.hpp
Engine/Source/Window/: SDL_Window.cpp  SDL_Window.hpp  Win32_Window.cpp  Win32_Window.hpp  Window.cpp  Window.hpp
Engine/src/Core/: Engine.cpp  Engine.hpp
Sandbox/: CMakeLists.txt
Sandbox/Assets/shaders/: Basic.slang  Circle.slang  Quad.slang
Sandbox/Assets/shaders/Cache/: Quad-ps.cso  Quad-vs.cso
Sandbox/Assets/shaders/DX11/: Quad.hlsl  shader.hlsl
Sandbox/Assets/shaders/OpenGL/: shader.glsl
Sandbox/Source/: Game.cpp  Game.hpp  Sandbox.cpp  Sandbox.hpp  main.cpp
Sandbox/src/: Game.cpp  Game.hpp
